--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               to="2 2 2"
               direction='alternate-reverse'
               easing= "ease-in-out-circ"     
-              repeat="indefinite"></a-animation>
+              repeat="1000"></a-animation>
      </a-sphere>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
