--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               easing= "ease-in-out-circ"     
               repeat="1000"></a-animation>
      </a-sphere>
-		<a-marker-camera preset='kanji'></a-marker-camera>
+		<a-marker-camera preset='custom' type='pattern' url='pattern-iceberg-21.patt'></a-marker-camera>
 	</a-scene>
 <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
 <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
