--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
               repeat="1000"></a-animation>
      </a-sphere>
         <a-marker-camera type='pattern' url='pattern-iceberg-21.patt'></a-marker-camera>
-	</a-scene>
+    </a-scene>
+    <footer>
+        <div style="width: 100%;">
+            <button>Reload Window</button>
+        </div>
+    </footer>
 <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
 <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
 <script>THREEx.ArToolkitContext.baseURL = 'https://rawgit.com/jeromeetienne/ar.js/master/three.js/'</script>
