--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div> -->
     <!-- Augmented Reality on the Web in 10 lines of html! https://github.com/jeromeetienne/ar.js --> 
 	<a-scene embedded artoolkit='sourceType: webcam;'>
-	<a-sphere src="./iceberg-21.png" radius="0.5" position="0 0.5 0" segments-height="53">
+	<a-sphere src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/space/earth_atmos_4096.jpg" radius="0.5" position="0 0.5 0" segments-height="53">
          <a-animation attribute="scale"
               dur="500" 
               from= "1 1 1"
